# cbreader

./: .gitignore  CBR2CBZ_README.md  README.md  UV_SETUP.md  cbr2cbz.py  comic_reader.py  comic_reader_tkinter.py  example_usage.py  find_missing_meta.py  find_missing_meta_gui.py  launch.py  launch_tkinter.py  pyproject.toml  requirements.txt
src/cbreader/: db_models.py  find_missing_meta_gui.py  launch.py  launch_tkinter.py
src/cbreader/cli/: backup_pdfs.py  cbr2cbz.py  clean_names.py  delete_empty_folders.py  find_missing_meta.py  pdf2cbz.py  remove_backups.py
